project(jnotest LANGUAGES CXX)

file(GLOB TARGET_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
add_executable(jnotest ${TARGET_SOURCES})

set(JNOFILEINPUT "syntax.jno")
set(DESTINATION_JNOFILE "${CMAKE_CURRENT_BINARY_DIR}/${JNOFILEINPUT}")
file(COPY_FILE "${CMAKE_CURRENT_SOURCE_DIR}/${JNOFILEINPUT}" ${DESTINATION_JNOFILE})

target_link_libraries(jnotest JNOParser)
